poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
  labels:
    app: poll
spec:
  type: ClusterIP
  selector:
    app: poll
  ports:
    - port: 80
      targetPort: 80
